# engine

./: .env.example  .gitignore  AGENTS.md  README.md  engine.json.example  engine.py  main.py  pyproject.toml  test_callback_deferral.py  test_early_report.py  test_pending_semantic.py  test_race_condition.py  test_registration_race.py  test_wake_flag_bug.py
docs/: agent-core.md  codebase-structure.md  env.md  merge-state.md  notebook.md  sample.json  tavily-tools.md
docs/todo/: full-result-query-tool.md  time-aware-prompt.md
engine/: __init__.py  agent_core.py  agent_log.py  config.py  llm_provider.py  logger.py  models.py  registry.py  runner.py  safety.py  state_machine.py  time.py
engine/engine.egg-info/: PKG-INFO  SOURCES.txt  (+2 more)
examples/: basic_usage.py
src/: agent_core.py  config.py  llm_provider.py  models.py  registry.py  safety.py  state_machine.py  tools.py
tests/: conftest.py  test_concurrency.py  test_config.py  test_double_layer.py  test_e2e_logging.py  test_early_report.py  test_easy_task.py  test_error_handling.py  test_fallback_provider.py  test_integration_rate_control.py  test_llm_provider.py  test_logger.py  test_logging.py  test_max_depth.py  test_multilayer_subagent.py  test_pending_semantic.py  test_provider_integration.py  test_race_condition.py  test_rate_limit_safety.py  test_rate_limiter.py  test_registration_race.py  test_registry.py  test_single_layer.py  test_state_machine.py  test_tool_system.py  test_tools.py  test_triple_layer.py  test_wake_flag_bug.py  test_wake_mechanism.py  test_web_fetch.py  test_web_search.py  utils.py
(+39 files in other folders)
