[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-system"
version = "0.1.0"
description = "Agent system for AI automation"
requires-python = ">=3.12"
dependencies = [
    "openai",
    "python-dotenv",
]

[tool.setuptools]
package-dir = {"" = "src"}
